[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gameplay/Entities/Equipment/Equipment.gd" type="Script" id=1]

[node name="Equipment" type="Node"]
script = ExtResource( 1 )

[node name="HeadSlot" type="Node" parent="."]

[node name="ChestSlot" type="Node" parent="."]

[node name="LegsSlot" type="Node" parent="."]

[node name="FeetSlot" type="Node" parent="."]

[node name="HandsSlot" type="Node" parent="."]

[node name="WeaponSlot" type="Node" parent="."]
